tests/negative/typecheck/immutable-index.orng
fn main() -> Int
    let x: [4]Int = (1, 2, 3, 4)
    let y = []x
    y[0] = 4
    0